Attempting to resolve spacing issues

--- a/index.css
+++ b/index.css
@@ -67,7 +67,7 @@ nav a{
     width: 100%;
     font-size: calc(2px + 2vw);
     border: 4px solid #395c6b;
-    padding: 3% 10%;
+    padding: 5% 5%;
 }
 
 
@@ -90,7 +90,7 @@ nav a{
 }
 
 .contact{
-    padding-left: 5%;
+    padding-left: 2%;
 }
 /**************************************/
 
